@@ -22,6 +22,7 @@
 
 #include "graphics.h"
 #include "map.h"
+#include "sprite.h"
 
 #include "resources/image.h"
 
