@@ -1,5 +1,6 @@
 Unreleased
 - Added support for NPCs asking for items
+- Added support for monster links
 - Added --log-file parameter to set log file path or '-' for stdout
 - Removed background color from shop list entries
 - Fixed keyboard movement not stopping on NPC dialog opening
